[package]
name = "microstable"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "microstable"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
pyth-solana-receiver-sdk = "0.3.2"
anchor-lang = { version = "0.30.1", features=["init-if-needed"]}
anchor-spl = "0.30.1"
solana-program= "=2.0.3"